objects/CN__c/CN__c.object-meta.xml
<CustomObject>
    <label>CN</label>
    <nameField>
        <label>CN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CNs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>