objects/CN__c/fields/Call_Blocking__c.field-meta.xml
<CustomField>
    <fullName>Call_Blocking__c</fullName>
    <label>Call Blocking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blocks Collect and Third Party (Default/Required)</fullName>
                <default>true</default>
                <label>Blocks Collect and Third Party (Default/Required)</label>
            </value>
            <value>
                <fullName>Accepts All Calls (Third Party Biller Required)</fullName>
            </value>
            <value>
                <fullName>Blocks Collect (Third Party Biller Required)</fullName>
            </value>
            <value>
                <fullName>Blocks Third Party (Third Party Biller Required)</fullName>
            </value>
            <value>
                <fullName>Blocks Collect and Third Party (Default)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>