objects/CN__c/fields/DSL__c.field-meta.xml
<CustomField>
    <fullName>DSL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DSL</label>
    <type>Checkbox</type>
</CustomField>