objects/CN__c/fields/Opportunity_Location__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Location__c</fullName>
    <label>Opportunity Location</label>
    <referenceTo>Opportunity_Location__c</referenceTo>
    <relationshipLabel>CNs</relationshipLabel>
    <relationshipName>CNs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>