objects/CN__c/fields/Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product__c</fullName>
    <formula>Opportunity_Line_Item__r.PP_Sales_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Product</label>
    <type>Text</type>
</CustomField>