objects/CN__c/recordTypes/Hosted_Voice_CN.recordType-meta.xml
<RecordType>
    <fullName>Hosted_Voice_CN</fullName>
    <active>true</active>
    <description>Hosted Voice CN Record Type</description>
    <label>Hosted Voice CN</label>
</RecordType>